--- a/code/templates/FlightDashboard.html
+++ b/code/templates/FlightDashboard.html
@@ -6,10 +6,10 @@
 
 <head>
     <title>Flight Ahead</title>
-    <!--- Leaflet CSS --->
+    <!--- Leaflet CSS
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-        crossorigin="" />
+        crossorigin="" />  --->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -30,8 +30,8 @@
                 <h5>Origin</h5>
             </div>
             <div class="col-md-4">
-                <select id="origin" class="form-control">
-                    <option value="ATL">Atlanta - ATL</option>
+                <select class="form-control" id="originselect" >
+                    <option value="ATL" selected>Atlanta - ATL</option>
                     <option value="CLT">Charlotte - DEN</option>
                     <option value="ORD">Chicago - ORD</option>
                     <option value="DFW">Dallas/Fort Worth - DFW </option>
@@ -42,11 +42,11 @@
                 <h5>Time of Day</h5>
             </div>
             <div class="col-md-3">
-                <select id="timeofday" class="form-control">
-                    <option value="morning">Morning</option>
-                    <option value="afternoon">Afternoon</option>
-                    <option value="evening">Evening</option>
-                    <option value="night">Night</option>
+                <select class="form-control" id="timeofdayselect" >
+                    <option value="Morning" selected>Morning</option>
+                    <option value="Afternoon">Afternoon</option>
+                    <option value="Evening">Evening</option>
+                    <option value="Night">Night</option>
                 </select>
             </div>
         </div>
@@ -55,26 +55,26 @@
                 <h5>Destination</h5>
             </div>
             <div class="col-md-4">
-                <select id="dest" class="form-control">
+                <select class="form-control" id="destselect" >
                     <option value="ATL">Atlanta - ATL</option>
-                    <option value="CLT">Charlotte - DEN</option>
+                    <option value="CLT">Charlotte - CLT</option>
                     <option value="ORD">Chicago - ORD</option>
                     <option value="DFW">Dallas/Fort Worth - DFW </option>
-                    <option value="DEN">Denver - DEN</option>    
+                    <option value="DEN" selected>Denver - DEN</option>    
                 </select>
             </div>
             <div class="col-md-3">
                 <h5>Day of week</h5>
             </div>
             <div class="col-md-3">
-                    <select id="dayofweek" class="form-control">
-                        <option value="sunday">Sunday</option>
-                        <option value="monday">Monday</option>
-                        <option value="tuesday">Tuesday</option>
-                        <option value="wednesday">Wednesday</option>
-                        <option value="thursday">Thursday</option>
-                        <option value="friday">Friday</option>
-                        <option value="saturday">Saturday</option>
+                    <select class="form-control" id="weekdayselect" >
+                        <option value="Sunday">Sunday</option>
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday" selected>Friday</option>
+                        <option value="Saturday">Saturday</option>
                     </select>
             </div>
         </div>
@@ -83,9 +83,9 @@
                 <h5>Airline</h5>
             </div>
             <div class="col-md-4">
-                <select id="airline" class="form-control">
+                <select class="form-control" id="airlineselect" >
                     <option value="AA">American</option>
-                    <option value="DL">Delta</option>
+                    <option value="DL" selected>Delta</option>
                     <option value="OO">Skywest</option>
                     <option value="UA">United</option>
                     <option value="WN">Southwest</option>
@@ -95,11 +95,11 @@
                 <h5>Season</h5>
             </div>
             <div class="col-md-3">
-                <select id="Season" class="form-control">
-                    <option value="winter">Winter</option>
-                    <option value="winter">Spring</option>
-                    <option value="winter">Summer</option>
-                    <option value="winter">Fall</option>
+                <select class="form-control" id="seasonselect" >
+                    <option value="Winter" selected>Winter</option>
+                    <option value="Spring">Spring</option>
+                    <option value="Summer">Summer</option>
+                    <option value="Autumn">Autumn</option>
                 </select>
             </div>
         </div>
@@ -108,15 +108,11 @@
              HTML !-->
             <button class="button-9" role="button" onclick="getPrediction()">Predict</button>
         </div>
+        <div class="col-md-10" id = "prediction"> Your flight is predicted to be - please click on the Predict button</div>
             <div class="col-md-12">
-                <h2>Route Map</h2>
                 <!-- The div that holds our map -->
-                <div class='tableauPlaceholder' id='viz1692485047630' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QP&#47;QP4R8Z5F5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QP4R8Z5F5' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QP&#47;QP4R8Z5F5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1692485047630');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script></div>
-                <!-- Leaflet JS -->
-                <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-                    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-                    crossorigin="">
-                    </script>
+                <div class='tableauPlaceholder' id='viz1692485047630' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QP&#47;QP4R8Z5F5&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QP4R8Z5F5' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QP&#47;QP4R8Z5F5&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1692485047630');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.4)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script></div>
+                
             </div>
         </div>
 </body>
@@ -126,14 +122,11 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <!-- D3 JavaScript -->
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<!-- Plotly JavaScript -->
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<!-- eCharts JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/echarts@5.4.2/dist/echarts.min.js"></script>
+
 
 <!-- Our JavaScript -->
 <script type="text/javascript" src="{{url_for('static', filename='js/maplogic.js')}}"></script>
-<script src="{{url_for('static', filename='js/flightprediction.js')}}"></script>
+<!-- <script src="{{url_for('static', filename='js/flightprediction.js')}}"></script> -->
 <!-- <script src="{{url_for('static', filename='js/sector_pie.js')}}"></script>
 <script src="{{ url_for('static', filename='js/experience_level_logic.js') }}"></script>
 <script src="{{url_for('static', filename='js/job_salary_bar.js')}}"></script>
